--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>GitHub页面</title>
+	<title>Liang Hao</title>
+	<link rel="stylesheet" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-	<h2>Hello world,I'm cat</h2>
-	<h3>莉莉丝</h3>
-</body>
+	<h2 style="text-align: center;margin-top: 100px;">Hello world,I'm cat</h2>
+	
+	<script src="./js/jquery.min.js"></script>
+	<script src="./js/bootstrap.min.js"></script>
 </html>
