--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h2 style="text-align: center;margin-top: 100px;">Hello world,I'm cat</h2>
-	<h3 style="text-align: center;margin-top: 50px;"><a href="haozizi.git.io/test.html">测试页面</a></h3>
+	<h3 style="text-align: center;margin-top: 50px;"><a href="/test.html">测试页面</a></h3>
 	<script src="./js/jquery.min.js"></script>
 	<script src="./js/bootstrap.min.js"></script>
 </html>
