--- a/index.html
+++ b/index.html
@@ -1,13 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
 	<title>Liang Hao</title>
-	<link rel="stylesheet" href="./css/bootstrap.min.css">
-	<link rel="stylesheet" href="./css/index.css">
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="keywords" content="">
+	<meta name="description" content="">
+
+	<!-- stylesheet css -->
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/templatemo-blue.css">
 </head>
-<body>
-	<h2 style="text-align: center;margin-top: 100px;">Hello world,I'm cat</h2>
-	<script src="./js/jquery.min.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
+<body data-spy="scroll" data-target=".navbar-collapse">
+
+<!-- preloader section -->
+<div class="preloader">
+	<div class="sk-spinner sk-spinner-wordpress">
+       <span class="sk-inner-circle"></span>
+     </div>
+</div>
+
+<!-- header section -->
+<header>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 col-sm-12">
+				<img src="images/lh.gif" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
+				<hr>
+				<h1 class="tm-title bold shadow">Hi,I'm 梁浩</h1>
+				<h1 class="white bold shadow">Just do it.</h1>
+			</div>
+		</div>
+	</div>
+</header>
+
+<!-- education and languages -->
+<section class="container">
+	<div class="row">
+		<div class="col-md-8 col-sm-12">
+			<div class="education">
+				<h2 class="white">教育经历</h2>
+					<div class="education-content">
+						<!-- <h4 class="education-title accent">New Web Design</h4> -->
+							<div class="education-school">
+								<h5>广东海洋大学</h5><span></span>
+								<h5>2012.9 - 2016.6</h5>
+							</div>
+						<p class="education-description">主修课程：离散数学、数据结构、计算系统基础、微型计算机基础、计算机组成与结构、C程序设计、C++程序设计、Java程序设计、操作系统、计算机网络、数据库原理与应用、软件工程、软件需求和测试、软件测试等。</p>
+					</div>
+			</div>
+		</div>
+		<div class="col-md-4 col-sm-12">
+			<div class="languages">
+				<h2>自我评价</h2>
+				<p>
+					本人性格稳重,比较随和,善于与别人沟通交流，有较强的英语表达、写作和翻译能力。
+					可塑性强，有较强的接受新事物的能力,自学能力。
+					曾获校三等奖学金；待人友善，容易相处；有较好的沟通能力。
+				</p>
+			</div>
+		</div>
+	</div>
+</section>
+
+<!-- about and skills section -->
+<section class="container">
+	<div class="row">
+		<div class="col-md-6 col-sm-12">
+			<div class="about">
+				<h3 class="accent">Easy Profile</h3>
+				<h2>Bootstrap v3.3.5</h2>
+				<p>This easy HTML profile is brought to you by templatemo website. There are 4 color themes, <a href="index-green.html">Green</a>, <a href="index.html">Blue</a>, <a href="index-gray.html">Gray</a>, and <a href="index-orange.html">Orange</a>. Sed vitae dui in neque elementum tempor eu id risus. Phasellus sed facilisis lacus, et venenatis augue.</p>
+			</div>
+		</div>
+		<div class="col-md-6 col-sm-12">
+			<div class="skills">
+				<h2 class="white">我的技能</h2>
+				<strong>HTML</strong>
+				<span class="pull-right">70%</span>
+					<div class="progress">
+						<div class="progress-bar progress-bar-primary" role="progressbar" 
+                        aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
+					</div>
+				<strong>CSS</strong>
+				<span class="pull-right">70%</span>
+					<div class="progress">
+						<div class="progress-bar progress-bar-primary" role="progressbar" 
+                        aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
+					</div>
+				<strong>Javascript</strong>
+				<span class="pull-right">70%</span>
+					<div class="progress">
+						<div class="progress-bar progress-bar-primary" role="progressbar" 
+                        aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
+					</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<!-- contact and experience -->
+<section class="container">
+	<div class="row">
+		<div class="col-md-4 col-sm-12">
+			<div class="contact">
+				<h2>联系我</h2>
+					<p><i class="fa fa-map-marker"></i> 广州市白云区嘉禾望岗</p>
+					<p><i class="fa fa-phone"></i> 15812350815</p>
+					<p><i class="fa fa-envelope"></i> 396927220@qq.com</p>
+					<p><i class="fa fa-globe"></i> www.haozizi.git.io</p>
+			</div>
+		</div>
+		<div class="col-md-8 col-sm-12">
+			<div class="experience">
+				<h2 class="white">工作经历</h2>
+					<div class="experience-content">
+						<h4 class="experience-title accent">软件工程师</h4>
+						<h5>北京点聚技术有限公司</h5><span></span>
+						<h5>2016.8 - 2016.11</h5>
+						<p class="education-description"></p>
+					</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<!-- javascript js -->	
+<script src="./js/jquery.min.js"></script>
+<script src="./js/bootstrap.min.js"></script>	
+<script src="./js/jquery.backstretch.min.js"></script>
+<script src="./js/custom.js"></script>
+
+</body>
 </html>
