--- a/pdf.html
+++ b/pdf.html
@@ -10,7 +10,7 @@
 	<div class="container">
 		<div class="left">
 			<div class="top">
-				<img src="./img/head.png" alt="">
+				<img src="./img/head.jpg" alt="">
 				<h2>梁 浩</h2>
 				<p>求职意向: <strong>前端工程师</strong></p>
 			</div>
@@ -43,6 +43,16 @@
 						</div>
 					</li>
 					<li><strong>Vue.js</strong>
+						<div class="pro">
+							<div class="pro-bar" pvalue="85"></div>
+						</div>
+					</li>
+					<li><strong>Java</strong>
+						<div class="pro">
+							<div class="pro-bar" pvalue="85"></div>
+						</div>
+					</li>
+					<li><strong>PHP</strong>
 						<div class="pro">
 							<div class="pro-bar" pvalue="85"></div>
 						</div>
