--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>梁浩的简历</title>
+	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 	<link rel="stylesheet" href="css/cssresets.css">
 	<link rel="stylesheet" href="css/index.css">
 </head>
@@ -12,6 +13,13 @@
 		<h2>梁 浩</h2>
 		<p>因为不能靠脸吃饭</p>
 		<p>所以走上了前端的不归路</p>
+	</div>
+
+	<div class="education item">
+		<h2 class="title">教育背景</h2>
+		<h3>广东海洋大学</h3>
+		<p>2012.9-2016.7</p>
+		<p>本科，软件工程专业</p>
 	</div>
 
 	<div class="skill item">
@@ -38,7 +46,14 @@
 			<div id="ps" class="sk-item">
 				<h3>photoshop</h3>
 			</div>
+			<div id="java" class="sk-item">
+				<h3>java</h3>
+			</div>
+			<div id="php" class="sk-item">
+				<h3>php</h3>
+			</div>
 		</div>
+
 	</div>
 
 	<div class="demo item">
@@ -47,6 +62,7 @@
 	
 	<ul class="pointer">
 		<li class="active" title="首页"></li>
+		<li title="教育"></li>
 		<li title="技能"></li>
 		<li title="项目"></li>
 		<p class="showbox"></p>
