'test手机端访问

--- a/mindex.html
+++ b/mindex.html
@@ -27,7 +27,7 @@
 	    <ul>
 	        <li><strong>HTML</strong>
 	            <div class="pro">
-	                <div class="pro-bar" pvalue="85"></div>
+	                <div class="pro-bar" pvalue="90"></div>
 	            </div>
 	        </li>
 	        <li><strong>CSS</strong>
@@ -37,32 +37,32 @@
 	        </li>
 	        <li><strong>JavaScript</strong>
 	            <div class="pro">
-	                <div class="pro-bar" pvalue="85"></div>
+	                <div class="pro-bar" pvalue="70"></div>
 	            </div>
 	        </li>
 	        <li><strong>Jquery</strong>
 	            <div class="pro">
-	                <div class="pro-bar" pvalue="85"></div>
+	                <div class="pro-bar" pvalue="75"></div>
 	            </div>
 	        </li>
 	        <li><strong>Bootstrap</strong>
 	            <div class="pro">
-	                <div class="pro-bar" pvalue="85"></div>
+	                <div class="pro-bar" pvalue="70"></div>
 	            </div>
 	        </li>
 	        <li><strong>Vue.js</strong>
 	            <div class="pro">
-	                <div class="pro-bar" pvalue="85"></div>
+	                <div class="pro-bar" pvalue="70"></div>
 	            </div>
 	        </li>
 	        <li><strong>Java</strong>
 	            <div class="pro">
-	                <div class="pro-bar" pvalue="85"></div>
+	                <div class="pro-bar" pvalue="65"></div>
 	            </div>
 	        </li>
 	        <li><strong>PHP</strong>
 	            <div class="pro">
-	                <div class="pro-bar" pvalue="85"></div>
+	                <div class="pro-bar" pvalue="60"></div>
 	            </div>
 	        </li>
 	    </ul>
@@ -80,8 +80,16 @@
 	        <li class="email icons">396927220@qq.com</li>
 	    </ul>
 	</div>
-
-
-
+	
+	<script>
+		window.onload = function(){
+			var pbs = document.getElementsByClassName('pro-bar');
+			console.log(pbs.length);
+			for (var i = 0; i < pbs.length; i++) {
+				var value = pbs[i].getAttribute('pvalue');
+				pbs[i].style.width = value + 'px';
+			}
+		}
+	</script>
 </body>
 </html>
