--- a/pdf.html
+++ b/pdf.html
@@ -19,7 +19,7 @@
 				<ul>
 					<li><strong>HTML</strong>
 						<div class="pro">
-							<div class="pro-bar" pvalue="85"></div>
+							<div class="pro-bar" pvalue="90"></div>
 						</div>
 					</li>
 					<li><strong>CSS</strong>
@@ -29,32 +29,32 @@
 					</li>
 					<li><strong>JavaScript</strong>
 						<div class="pro">
-							<div class="pro-bar" pvalue="85"></div>
+							<div class="pro-bar" pvalue="80"></div>
 						</div>
 					</li>
 					<li><strong>Jquery</strong>
 						<div class="pro">
-							<div class="pro-bar" pvalue="85"></div>
+							<div class="pro-bar" pvalue="75"></div>
 						</div>
 					</li>
 					<li><strong>Bootstrap</strong>
 						<div class="pro">
-							<div class="pro-bar" pvalue="85"></div>
+							<div class="pro-bar" pvalue="70"></div>
 						</div>
 					</li>
 					<li><strong>Vue.js</strong>
 						<div class="pro">
-							<div class="pro-bar" pvalue="85"></div>
+							<div class="pro-bar" pvalue="75"></div>
 						</div>
 					</li>
 					<li><strong>Java</strong>
 						<div class="pro">
-							<div class="pro-bar" pvalue="85"></div>
+							<div class="pro-bar" pvalue="65"></div>
 						</div>
 					</li>
 					<li><strong>PHP</strong>
 						<div class="pro">
-							<div class="pro-bar" pvalue="85"></div>
+							<div class="pro-bar" pvalue="60"></div>
 						</div>
 					</li>
 				</ul>
@@ -87,7 +87,8 @@
 				</div>
 			</div>
 		</div>
-
 	</div>
+
+	<script src="js/pdf.js"></script>
 </body>
 </html>
