--- a/pdf.html
+++ b/pdf.html
@@ -83,7 +83,7 @@
 				<p>熟练掌握Javascript/HTML/CSS/Ajax等前端开发技术；</br>
 				熟练使用JQuery，Bootstrap等js框架；</br>
 				熟悉Vue.js;</br>
-				熟悉前端自动化工具（gulp、webpack）。</br>
+				了解前端自动化工具（webpack等）。</br>
 				熟悉Java,了解android开发；</p>
 			</div>
 
@@ -91,17 +91,17 @@
 				<h2>项目经历</h2>
 				<div class="content">			
 					<div class="exp-item">
-						<h3 class="pro-title"><a href="index.html" target="_blank">个人简历主页</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
+						<h3 class="pro-title"><a href="http://haozizi.github.io" target="_blank">个人简历主页</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
 						<p>使用了一些jquery插件</p>
 					</div>
 
 					<div class="exp-item">
-						<h3 class="pro-title"><a href="demo/mw/index.html" target="_blank">100商城</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
+						<h3 class="pro-title"><a href="http://haozizi.github.io/demo/mw/index.html" target="_blank">100商城</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
 						<p>模块化布局思想编写页面。</p>
 					</div>
 
 					<div class="exp-item">
-						<h3 class="pro-title"><a href="demo/res/index.html" target="_blank">理财宝</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
+						<h3 class="pro-title"><a href="http://haozizi.github.io/demo/res/index.html" target="_blank">理财宝</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
 						<p>使用媒体查询实现了响应式。</p>
 					</div>
 				</div>
