--- a/index.html
+++ b/index.html
@@ -60,21 +60,34 @@
 	<div class="demo item">
 		<h2 class="title">项目经验</h2>
 		<div class="wraper">
-			<div class="pictureSlider poster-main" data-setting='{"width":1000,"height":500,"posterWidth":640,"posterHeight":640,"scale":0.8,"autoPlay":true,"delay":3000,"speed":300}'>
-			    <div class="poster-btn poster-prev-btn"></div>
-			    <ul class="poster-list">
-			        <li class="poster-item">
-			            <a href="demo/mw/index.html" target="_blank"><img src="img/project1.png" width="100%" height="100%"></a>
-			        </li>
-			        <li class="poster-item">
-			            <a href="demo/res/index.html" target="_blank"><img src="img/project2.png" width="100%" height="100%"></a>
-			        </li>
-			        <li class="poster-item">
-			            <a href="demo/mk/index.html" target="_blank"><img src="img/mk.png" width="100%" height="100%"></a>
-			        </li>
-			    </ul>
-			    <div class="poster-btn poster-next-btn"></div>
+			 <div class="row">
+		    	<div class="exp-item">
+			        <h3 class="exp-title"><a href="#" target="_blank">仿饿了么app</a><span><i>Vue.js</i><i>es6</i><i>webpack</i></span></h3>
+			        <p>使用Vue.js+es6+webpack,采用组件化、模块化的开发方式</p>
+			    </div>
+			    <div class="exp-item">
+			        <h3 class="exp-title"><a href="http://haozizi.github.io" target="_blank">个人简历主页</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
+			        <p>使用了一些jquery插件</p>
+			    </div>
+		    </div>
+		    <div class="row">
+			    <div class="exp-item">
+			        <h3 class="exp-title"><a href="http://haozizi.github.io/demo/phone/index.html" target="_blank">手机宣传页面</a><span><i>html5</i><i>css3</i></span></h3>
+			        <p>HTML5和CSS3动画实现</p>
+			    </div>
+			    <div class="exp-item">
+			        <h3 class="exp-title"><a href="http://haozizi.github.io/demo/mw/index.html" target="_blank">100商城</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
+			        <p>模块化布局思想编写页面。</p>
+			    </div>
 			</div>
+		    <div class="row">
+		    	<div class="exp-item">
+			        <h3 class="exp-title"><a href="http://haozizi.github.io/demo/res/index.html" target="_blank">理财宝</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
+			        <p>使用媒体查询实现了响应式。</p>
+			    </div>
+			    <div class="exp-item"></div>
+		    </div>
+		</div>
 		</div>
 	</div>
 	
