--- a/pdf.html
+++ b/pdf.html
@@ -89,10 +89,20 @@
 
 			<div class="pro-exp item">
 				<h2>项目经历</h2>
-				<div class="content">			
+				<div class="content">
+					<div class="exp-item">
+						<h3 class="pro-title"><a href="#" target="_blank">仿饿了么app</a><span><i>Vue.js</i><i>es6</i><i>webpack</i></span></h3>
+						<p>使用Vue.js+es6+webpack,采用组件化、模块化的开发方式</p>
+					</div>
+
 					<div class="exp-item">
 						<h3 class="pro-title"><a href="http://haozizi.github.io" target="_blank">个人简历主页</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
 						<p>使用了一些jquery插件</p>
+					</div>
+
+					<div class="exp-item">
+						<h3 class="pro-title"><a href="#" target="_blank">手机宣传页面</a><span><i>html5</i><i>css3</i></span></h3>
+						<p>HTML5和CSS3动画实现</p>
 					</div>
 
 					<div class="exp-item">
