--- a/pdf.html
+++ b/pdf.html
@@ -101,7 +101,7 @@
 					</div>
 
 					<div class="exp-item">
-						<h3 class="pro-title"><a href="#" target="_blank">手机宣传页面</a><span><i>html5</i><i>css3</i></span></h3>
+						<h3 class="pro-title"><a href="http://haozizi.github.io/demo/phone/index.html" target="_blank">手机宣传页面</a><span><i>html5</i><i>css3</i></span></h3>
 						<p>HTML5和CSS3动画实现</p>
 					</div>
 
