--- a/pdf.html
+++ b/pdf.html
@@ -64,7 +64,7 @@
 				<ul>
 					<li class="tel"><img src="img/tel1.png" alt="">15812350815</li>
 					<li class="email"><img src="img/email1.png" alt="">396927220@qq.com</li>
-					<li class="homepager"><img src="img/home1.png" alt="">haozizi.github.io</li>
+					<li class="homepager"><img src="img/home1.png" alt="">www.bestlianghao.cn</li>
 				</ul>
 			</div>
 		</div>
