更新简历信息

--- a/pdf.html
+++ b/pdf.html
@@ -47,6 +47,11 @@
 							<div class="pro-bar" pvalue="75"></div>
 						</div>
 					</li>
+					<li><strong>Node.js</strong>
+						<div class="pro">
+							<div class="pro-bar" pvalue="70"></div>
+						</div>
+					</li>
 					<li><strong>Java</strong>
 						<div class="pro">
 							<div class="pro-bar" pvalue="65"></div>
@@ -82,9 +87,10 @@
 				<h2>自我评价</h2>
 				<p>熟练掌握Javascript/HTML/CSS/Ajax等前端开发技术；</br>
 				熟练使用JQuery，Bootstrap等js框架；</br>
-				熟悉Vue.js;</br>
-				了解前端自动化工具（webpack等）。</br>
-				熟悉Java,了解android开发；</p>
+				熟悉Vue.js,Node.js;</br>
+				了解前端自动化工具（gulp,webpack等）;</br>
+				了解小程序开发；</br>
+				熟悉Java,PHP。</p>
 			</div>
 
 			<div class="pro-exp item">
@@ -121,7 +127,7 @@
 				<h2>工作经历</h2>
 				<div class="exp-item">
 					<h3>北京点聚技术有限公司</h3>
-					<p class="time">2016年8月-2017年1月</p>
+					<p class="time">2016年8月-2017年2月</p>
 					<p>担任软件工程师,负责参与公司无纸化系统的后台开发。</p>
 				</div>
 			</div>
