更新简历,项目经验

--- a/pdf.html
+++ b/pdf.html
@@ -17,12 +17,12 @@
 
 			<div class="skills">
 				<ul>
-					<li><strong>HTML</strong>
+					<li><strong>HTML(5)</strong>
 						<div class="pro">
 							<div class="pro-bar" pvalue="90"></div>
 						</div>
 					</li>
-					<li><strong>CSS</strong>
+					<li><strong>CSS(3)</strong>
 						<div class="pro">
 							<div class="pro-bar" pvalue="85"></div>
 						</div>
@@ -57,11 +57,11 @@
 							<div class="pro-bar" pvalue="65"></div>
 						</div>
 					</li>
-					<li><strong>PHP</strong>
+<!-- 					<li><strong>PHP</strong>
 						<div class="pro">
 							<div class="pro-bar" pvalue="60"></div>
 						</div>
-					</li>
+					</li> -->
 				</ul>
 			</div>
 
@@ -80,17 +80,16 @@
 				<h3>广东海洋大学</h3>
 				<p class="time">2012年9月-2016年7月</p>
 				<p>本科生，软件工程专业</p>
-				<p>毕设课题：基于新浪微博开放平台的微博APP(Android)</p>
 			</div>
 			
 			<div class="self-comment item">
 				<h2>自我评价</h2>
-				<p>熟练掌握Javascript/HTML/CSS/Ajax等前端开发技术；</br>
+				<p>熟练掌握Javascript/HTML(5)/CSS(3)/Ajax等前端开发技术；</br>
 				熟练使用JQuery，Bootstrap等js框架；</br>
 				熟悉Vue.js,Node.js;</br>
 				了解前端自动化工具（gulp,webpack等）;</br>
 				了解小程序开发；</br>
-				熟悉Java,PHP。</p>
+				熟悉Java,了解后台开发。</p>
 			</div>
 
 			<div class="pro-exp item">
@@ -98,28 +97,33 @@
 				<div class="content">
 					<div class="exp-item">
 						<h3 class="pro-title"><a href="#" target="_blank">仿饿了么app</a><span><i>Vue.js</i><i>es6</i><i>webpack</i></span></h3>
-						<p>使用Vue.js+es6+webpack,采用组件化、模块化的开发方式</p>
+						<p>使用Vue.js+es6+webpack,采用组件化、模块化的开发方式,实现了商品、评论、商家介绍等各模块</p>
 					</div>
 
 					<div class="exp-item">
-						<h3 class="pro-title"><a href="http://haozizi.github.io" target="_blank">个人简历主页</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
-						<p>使用了一些jquery插件</p>
+						<h3 class="pro-title"><a href="www.bestlianghao.cn" target="_blank">个人主页</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
+						<p>使用GitHub Pages进行搭建的个人网站(www.bestlianghao.cn，个人的项目作品也在此页面上查看)</p>
+					</div>
+
+					<div class="exp-item">
+						<h3 class="pro-title"><a href="http://haozizi.github.io/demo/mw/index.html" target="_blank">豆瓣电影小程序</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
+						<p>通过豆瓣API实现了电影信息资讯、电影搜索,初步熟悉了小程序的开发。</p>
 					</div>
 
 					<div class="exp-item">
 						<h3 class="pro-title"><a href="http://haozizi.github.io/demo/phone/index.html" target="_blank">手机宣传页面</a><span><i>html5</i><i>css3</i></span></h3>
-						<p>HTML5和CSS3动画实现</p>
+						<p>使用CSS3实现动画特效；侧边导航和头部导航双向绑定准确定位；导航菜单中跟随鼠标的移动元素进行变化；鼠标滚动到特定位置时，内容跟随加载。</p>
 					</div>
 
 					<div class="exp-item">
 						<h3 class="pro-title"><a href="http://haozizi.github.io/demo/mw/index.html" target="_blank">100商城</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
-						<p>模块化布局思想编写页面。</p>
+						<p>模块化布局思想编写页面,提高代码的复用率。</p>
 					</div>
 
-					<div class="exp-item">
+<!-- 					<div class="exp-item">
 						<h3 class="pro-title"><a href="http://haozizi.github.io/demo/res/index.html" target="_blank">理财宝</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
 						<p>使用媒体查询实现了响应式。</p>
-					</div>
+					</div> -->
 				</div>
 			</div>
 
@@ -128,7 +132,7 @@
 				<div class="exp-item">
 					<h3>北京点聚技术有限公司</h3>
 					<p class="time">2016年8月-2017年2月</p>
-					<p>担任软件工程师,负责参与公司无纸化系统的后台开发。</p>
+					<p>担任软件工程师,负责参与公司无纸化系统的后台开发(JavaWeb)，期间由于需求需要学习前端知识，从而踏上了前端之路。</p>
 				</div>
 			</div>
 
