--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
 		<h2 class="title">掌握技能</h2>
 		<div class="it-wraper clearfix">
 			<div id="html" class="sk-item">
-				<h3>html</h3>
+				<h3>HTML(5)</h3>
 			</div>
 			<div id="css" class="sk-item">
-				<h3>css</h3>
+				<h3>CSS(3)</h3>
 			</div>
 			<div id="js" class="sk-item">
-				<h3>js</h3>
+				<h3>JavaScript</h3>
 			</div>
 			<div id="jq" class="sk-item">
-				<h3>jquery</h3>
+				<h3>Jquery</h3>
 			</div>
 			<div id="bs" class="sk-item">
-				<h3>bootstrap</h3>
+				<h3>Bootstrap</h3>
 			</div>
 			<div id="vue" class="sk-item">
-				<h3>vue.js</h3>
+				<h3>Vue.js</h3>
 			</div>
 			<div id="ps" class="sk-item">
-				<h3>photoshop</h3>
+				<h3>Photoshop</h3>
 			</div>
 			<div id="java" class="sk-item">
 				<h3>java</h3>
@@ -63,29 +63,32 @@
 			 <div class="row">
 		    	<div class="exp-item">
 			        <h3 class="exp-title"><a href="#" target="_blank">仿饿了么app</a><span><i>Vue.js</i><i>es6</i><i>webpack</i></span></h3>
-			        <p>使用Vue.js+es6+webpack,采用组件化、模块化的开发方式</p>
+			        <p>使用Vue.js+es6+webpack,采用组件化、模块化的开发方式,实现了商品、评论、商家介绍等各模块</p>
 			    </div>
 			    <div class="exp-item">
-			        <h3 class="exp-title"><a href="http://haozizi.github.io" target="_blank">个人简历主页</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
-			        <p>使用了一些jquery插件</p>
+			        <h3 class="exp-title"><a href="http://haozizi.github.io" target="_blank">个人主页</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
+			        <p>使用GitHub Pages进行搭建的个人网站(www.bestlianghao.cn，个人的项目作品也在此页面上查看)</p>
 			    </div>
 		    </div>
 		    <div class="row">
 			    <div class="exp-item">
 			        <h3 class="exp-title"><a href="http://haozizi.github.io/demo/phone/index.html" target="_blank">手机宣传页面</a><span><i>html5</i><i>css3</i></span></h3>
-			        <p>HTML5和CSS3动画实现</p>
+			        <p>使用CSS3实现动画特效；侧边导航和头部导航双向绑定准确定位；导航菜单中跟随鼠标的移动元素进行变化；鼠标滚动到特定位置时，内容跟随加载。</p>
 			    </div>
 			    <div class="exp-item">
-			        <h3 class="exp-title"><a href="http://haozizi.github.io/demo/mw/index.html" target="_blank">100商城</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
-			        <p>模块化布局思想编写页面。</p>
+			    	<h3 class="exp-title"><a href="http://haozizi.github.io/demo/fifa/index.html" target="_blank">FIFA充值活动页面</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
+			        <p>根据重构要求，自行切图，合成雪碧图，高度还原设计稿。</p>
 			    </div>
 			</div>
 		    <div class="row">
 		    	<div class="exp-item">
 			        <h3 class="exp-title"><a href="http://haozizi.github.io/demo/res/index.html" target="_blank">理财宝</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
-			        <p>使用媒体查询实现了响应式。</p>
+			        <p>使用媒体查询实现了响应式,适配PC端和移动端。</p>
 			    </div>
-			    <div class="exp-item"></div>
+			    <div class="exp-item">
+			        <h3 class="exp-title"><a href="http://haozizi.github.io/demo/mw/index.html" target="_blank">100商城</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
+			        <p>模块化布局思想编写页面,提高代码的复用率。</p>
+			    </div>
 		    </div>
 		</div>
 		</div>
