修改移动端访问

--- a/demo/resume(new)/index.html
+++ b/demo/resume(new)/index.html
@@ -10,7 +10,7 @@
 		.swiper-container{width: 100%;height: 100%;}
 		.swiper-slide{width: 100%;height: 100%; background:#33CC99;}
 	</style>
-	<link rel="stylesheet" href="css/m-index.css">
+	<link rel="stylesheet" href="css/index.css">
 	<title>梁浩的简历</title>
 </head>
 <body>
@@ -154,7 +154,7 @@
 	    </div>
 	</div>
 
-	<script src="js/jquery.min.js"></script>
+	<script src="js/jquery-1.10.1.min.js"></script>
 	<script src="js/swiper-3.4.2.jquery.min.js"></script>
 	<script>
 		
