--- a/mindex.html
+++ b/mindex.html
@@ -48,7 +48,7 @@
 						<div class="skProgress-item">
 				    		<p class="skName">HTML(5)</p>
 							<div class="skProgress-wrap">
-								<span class="skProgress"></span>
+								<span class="skProgress" data-num="9"></span>
 							</div>
 				    	</div>
 					</div>
@@ -56,7 +56,7 @@
 						<div class="skProgress-item">
 				    		<p class="skName">CSS(3)</p>
 							<div class="skProgress-wrap">
-								<span class="skProgress"></span>
+								<span class="skProgress" data-num="9"></span>
 							</div>
 				    	</div>
 					</div>
@@ -64,7 +64,7 @@
 						<div class="skProgress-item">
 				    		<p class="skName">JavaScript</p>
 							<div class="skProgress-wrap">
-								<span class="skProgress"></span>
+								<span class="skProgress" data-num="8.6"></span>
 							</div>
 				    	</div>
 					</div>
@@ -72,7 +72,7 @@
 						<div class="skProgress-item">
 				    		<p class="skName">Jquery</p>
 							<div class="skProgress-wrap">
-								<span class="skProgress"></span>
+								<span class="skProgress" data-num="8"></span>
 							</div>
 				    	</div>
 					</div>
@@ -80,7 +80,7 @@
 						<div class="skProgress-item">
 				    		<p class="skName">Bootstrap</p>
 							<div class="skProgress-wrap">
-								<span class="skProgress"></span>
+								<span class="skProgress" data-num="8"></span>
 							</div>
 				    	</div>
 					</div>
@@ -88,7 +88,7 @@
 						<div class="skProgress-item">
 				    		<p class="skName">Vue.js</p>
 							<div class="skProgress-wrap">
-								<span class="skProgress"></span>
+								<span class="skProgress" data-num="7.5"></span>
 							</div>
 				    	</div>
 					</div>
@@ -96,7 +96,7 @@
 						<div class="skProgress-item">
 				    		<p class="skName">Node.js</p>
 							<div class="skProgress-wrap">
-								<span class="skProgress"></span>
+								<span class="skProgress" data-num="7"></span>
 							</div>
 				    	</div>
 					</div>
@@ -104,7 +104,7 @@
 						<div class="skProgress-item">
 				    		<p class="skName">Java</p>
 							<div class="skProgress-wrap">
-								<span class="skProgress"></span>
+								<span class="skProgress" data-num="7.8"></span>
 							</div>
 				    	</div>
 					</div>
@@ -116,31 +116,31 @@
 			    <div class="wraper">
 			        <div class="row">
 			        	<div class="exp-item">
-			                <h3 class="exp-title clearfix"><a href="http://haozizi.github.io/demo/movie/index.html" target="_blank">电影资讯</a><span><i>Vue.js 2.0</i><i>es6</i><i>webpack</i></span></h3>
+			                <h3 class="exp-title clearfix"><a href="http://www.bestlianghao.cn/demo/movie/index.html" target="_blank">电影资讯</a><span><i>Vue.js 2.0</i><i>es6</i><i>webpack</i></span></h3>
 			            </div>
 			            <div class="exp-item">
-			                <h3 class="exp-title clearfix"><a href="http://haozizi.github.io/demo/ele/index.html" target="_blank">仿饿了么app</a><span><i>Vue.js</i><i>es6</i><i>webpack</i></span></h3>
+			                <h3 class="exp-title clearfix"><a href="http://www.bestlianghao.cn/demo/ele/index.html" target="_blank">仿饿了么app</a><span><i>Vue.js</i><i>es6</i><i>webpack</i></span></h3>
 			            </div>
 			        </div>
 			        <div class="row">
 				        <div class="exp-item">
-				                <h3 class="exp-title clearfix"><a href="http://haozizi.github.io" target="_blank">个人主页</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
+				                <h3 class="exp-title clearfix"><a href="http://www.bestlianghao.cn" target="_blank">个人主页</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
 				        </div>
 			            <div class="exp-item">
-			                <h3 class="exp-title clearfix"><a href="http://haozizi.github.io/demo/phone/index.html" target="_blank">手机宣传页面</a><span><i>html5</i><i>css3</i></span></h3>
+			                <h3 class="exp-title clearfix"><a href="http://www.bestlianghao.cn/demo/phone/index.html" target="_blank">手机宣传页面</a><span><i>html5</i><i>css3</i></span></h3>
 			            </div>
 			        </div>
 			        <div class="row">
 			            <div class="exp-item">
-			                <h3 class="exp-title clearfix"><a href="http://haozizi.github.io/demo/res/index.html" target="_blank">理财宝</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
+			                <h3 class="exp-title clearfix"><a href="http://www.bestlianghao.cn/demo/res/index.html" target="_blank">理财宝</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
 			            </div>
 			            <div class="exp-item">
-			                <h3 class="exp-title clearfix"><a href="http://haozizi.github.io/demo/fifa/index.html" target="_blank">FIFA充值活动页面</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
+			                <h3 class="exp-title clearfix"><a href="http://www.bestlianghao.cn/demo/fifa/index.html" target="_blank">FIFA充值活动页面</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
 			            </div>
 			        </div>
 			        <div class="row">
 			        	<div class="exp-item">
-			                <h3 class="exp-title clearfix"><a href="http://haozizi.github.io/demo/mw/index.html" target="_blank">100商城</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
+			                <h3 class="exp-title clearfix"><a href="http://www.bestlianghao.cn/demo/mw/index.html" target="_blank">100商城</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
 			            </div>
 			            <div class="exp-item"></div>
 			        </div>
@@ -153,7 +153,7 @@
 	    	
 	    </div>
 	</div>
-
+	
 	<script src="js/jquery.min.js"></script>
 	<script src="js/swiper-3.4.2.jquery.min.js"></script>
 	<script>
@@ -166,7 +166,12 @@
         mousewheelControl: true,
         scrollbar: false
     });
-    
+    window.onload = function(){
+	var ps = document.getElementsByClassName("skProgress");
+	for (var i = 0; i < ps.length; i++) {
+			ps[i].style.width = ps[i].getAttribute("data-num") + "rem";
+		}
+	}
 	</script>
 </body>
 </html>
