--- a/pdf.html
+++ b/pdf.html
@@ -12,7 +12,7 @@
 			<div class="top">
 				<img src="./img/head.jpg" alt="">
 				<h2>梁 浩</h2>
-				<p>求职意向: <strong>前端工程师</strong></p>
+				<!-- <p>求职意向: <strong>前端工程师</strong></p> -->
 			</div>
 
 			<div class="skills">
@@ -54,7 +54,7 @@
 					</li>
 					<li><strong>Java</strong>
 						<div class="pro">
-							<div class="pro-bar" pvalue="65"></div>
+							<div class="pro-bar" pvalue="80"></div>
 						</div>
 					</li>
 <!-- 					<li><strong>PHP</strong>
@@ -84,12 +84,15 @@
 			
 			<div class="self-comment item">
 				<h2>自我评价</h2>
-				<p>熟练掌握Javascript/HTML(5)/CSS(3)/Ajax等前端开发技术；</br>
+				<p>
+				熟悉Java,掌握后台开发;</br>
+				熟悉SQL SERVER，MySQL等常用数据库。</br>
+				熟练掌握Javascript/HTML(5)/CSS(3)/Ajax等前端开发技术；</br>
 				熟练使用JQuery，Bootstrap等js框架；</br>
 				熟悉Vue.js,Node.js;</br>
-				掌握小程序开发；</br>
 				了解前端自动化工具（gulp,webpack等）;</br>
-				熟悉Java,掌握后台开发。</p>
+				了解小程序开发；
+				</p>
 			</div>
 
 			<div class="pro-exp item">
@@ -120,8 +123,9 @@
 						<p>模块化布局思想编写页面,提高代码的复用率。</p>
 					</div>
 
+
 <!-- 					<div class="exp-item">
-						<h3 class="pro-title"><a href="http://www.bestlianghao.cn/demo/res/index.html" target="_blank">理财宝</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
+						<h3 class="pro-title"><a href="http://haozizi.github.io/demo/res/index.html" target="_blank">理财宝</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
 						<p>使用媒体查询实现了响应式。</p>
 					</div> -->
 				</div>
@@ -130,8 +134,8 @@
 			<div class="work-exp item">
 				<h2>工作经历</h2>
 				<div class="exp-item">
-					<h3>北京点聚技术有限公司</h3>
-					<p class="time">2016年8月-2017年3月</p>
+					<h3>深圳市梦码科技有限公司</h3>
+					<p class="time">2016年8月-2017年4月</p>
 					<p>担任软件工程师,负责参与公司无纸化系统的后台开发(JavaWeb)</p>
 				</div>
 			</div>
