--- a/mindex.html
+++ b/mindex.html
@@ -116,31 +116,31 @@
 			    <div class="wraper">
 			        <div class="row">
 			        	<div class="exp-item">
-			                <h3 class="exp-title clearfix"><a href="http://www.bestlianghao.cn/demo/movie/index.html" target="_blank">电影资讯</a><span><i>Vue.js 2.0</i><i>es6</i><i>webpack</i></span></h3>
+			                <h3 class="exp-title clearfix"><a href="haozizi.github.io/demo/movie/index.html" target="_blank">电影资讯</a><span><i>Vue.js 2.0</i><i>es6</i><i>webpack</i></span></h3>
 			            </div>
 			            <div class="exp-item">
-			                <h3 class="exp-title clearfix"><a href="http://www.bestlianghao.cn/demo/ele/index.html" target="_blank">仿饿了么app</a><span><i>Vue.js</i><i>es6</i><i>webpack</i></span></h3>
+			                <h3 class="exp-title clearfix"><a href="haozizi.github.io/demo/ele/index.html" target="_blank">仿饿了么app</a><span><i>Vue.js</i><i>es6</i><i>webpack</i></span></h3>
 			            </div>
 			        </div>
 			        <div class="row">
 				        <div class="exp-item">
-				                <h3 class="exp-title clearfix"><a href="http://www.bestlianghao.cn" target="_blank">个人主页</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
+				                <h3 class="exp-title clearfix"><a href="haozizi.github.io" target="_blank">个人主页</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
 				        </div>
 			            <div class="exp-item">
-			                <h3 class="exp-title clearfix"><a href="http://www.bestlianghao.cn/demo/phone/index.html" target="_blank">手机宣传页面</a><span><i>html5</i><i>css3</i></span></h3>
+			                <h3 class="exp-title clearfix"><a href="haozizi.github.io/demo/phone/index.html" target="_blank">手机宣传页面</a><span><i>html5</i><i>css3</i></span></h3>
 			            </div>
 			        </div>
 			        <div class="row">
 			            <div class="exp-item">
-			                <h3 class="exp-title clearfix"><a href="http://www.bestlianghao.cn/demo/res/index.html" target="_blank">理财宝</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
+			                <h3 class="exp-title clearfix"><a href="haozizi.github.io/demo/res/index.html" target="_blank">理财宝</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
 			            </div>
 			            <div class="exp-item">
-			                <h3 class="exp-title clearfix"><a href="http://www.bestlianghao.cn/demo/fifa/index.html" target="_blank">FIFA充值活动页面</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
+			                <h3 class="exp-title clearfix"><a href="haozizi.github.io/demo/fifa/index.html" target="_blank">FIFA充值活动页面</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
 			            </div>
 			        </div>
 			        <div class="row">
 			        	<div class="exp-item">
-			                <h3 class="exp-title clearfix"><a href="http://www.bestlianghao.cn/demo/mw/index.html" target="_blank">100商城</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
+			                <h3 class="exp-title clearfix"><a href="haozizi.github.io/demo/mw/index.html" target="_blank">100商城</a><span><i>html</i><i>css</i><i>jquery</i></span></h3>
 			            </div>
 			            <div class="exp-item"></div>
 			        </div>
